Bug: Stopped table header overlapping dropdown container

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -61,7 +61,7 @@
             border-radius: 15px;
             padding: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            z-index: 100;
+            z-index: 3;
             width: 25%;
             .section {
                 p {
@@ -106,7 +106,7 @@
             }
         }
         .search-dropdown-container {
-            z-index: 1;
+            z-index: 3;
             position: absolute;
             margin-top: 47px;
             border-radius: 0 0 8px 8px;
